--- a/src/components/home/Career.module.css
+++ b/src/components/home/Career.module.css
@@ -23,10 +23,10 @@
 .careerWrapper div p {
     font-style: normal;
     font-weight: 500;
-    font-size: 13px;
+    font-size: 14px;
     margin: 10px 0px;
     line-height: 16px;
-    text-transform: capitalize;
+    /* text-transform: capitalize; */
 }
 
 .careerWrapper div a {
