--- a/src/components/home/Learn.module.css
+++ b/src/components/home/Learn.module.css
@@ -104,7 +104,7 @@
     font-size: 15px;
     text-align: justify;
     line-height: 18px;
-    text-transform: capitalize;
+    /* text-transform: capitalize; */
 }
 
 .learnWrapper .innerFlex div a{
